--- a/161001-1.md
+++ b/161001-1.md
@@ -1,12 +1,10 @@
 ---
 layout: item
 id: 14431
-sort: 161979
 link: https://vlive.tv/embed/14431?&begin=978&end=1434
 day: 161001
-text: about close friends (wendy are you watching?)
 bonus: ~~they are so awkward singing together it's killing me and when irene just goes 'what??' omfg~~
 ---
 
-.
+about close friends (wendy are you watching?)
 
